--- a/index_copy.html
+++ b/index_copy.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>WarriorZ_Store:🎮</title>
-        <link rel="stylesheet" href="C:\Users\Yuvraj Jaiswal\Desktop\CSS-MySite\styles_copy.css">
+        <link rel="stylesheet" href="styles_copy.css">
         <link rel="icon" href="C:\Users\Yuvraj Jaiswal\Desktop\CSS-MySite\Icons\favicon_io\android-chrome-512x512.png">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,12 +19,12 @@
                     </div>
                     <nav>
                         <ul>
-                            <li class="store"><table><tr><td>Games:</td><td><a href="https://store.steampowered.com/search/?sort_by=Reviews_DESC&category1=998&deck_compatibility=3%2C2&os=win&supportedlang=english&filter=topsellers&ndl=1"><img src="C:\Users\Yuvraj Jaiswal\Desktop\CSS-MySite\Icons\sports_esports_FILL0_wght500_GRAD200_opsz48.png"></a></td></tr></table></li>
-                            <li><table><tr><td>Reviews:</td><td><a href="https://www.metacritic.com/game/pc/tekken-7/user-reviews"><img src="C:\Users\Yuvraj Jaiswal\Desktop\CSS-MySite\Icons\rate_review_FILL0_wght500_GRAD200_opsz48.png"></a></td></tr></table></li>
-                            <li><table><tr><td>Help:</td><td><a href="https://help.steampowered.com/en/"><img src="C:\Users\Yuvraj Jaiswal\Desktop\CSS-MySite\Icons\contact_support_FILL0_wght500_GRAD200_opsz48.png"></a></td></tr></table></li>
-                            <li><table><tr><td>FAQs:</td><td><a href="https://www.metacritic.com/faq"><img src="C:\Users\Yuvraj Jaiswal\Desktop\CSS-MySite\Icons\quiz_FILL0_wght500_GRAD200_opsz48.png"></a></td></tr></table></li>
-                            <li><table><tr><td>Cart:</td><td><a href="https://store.steampowered.com/cart/"><img src="C:\Users\Yuvraj Jaiswal\Desktop\CSS-MySite\Icons\add_shopping_cart_FILL0_wght500_GRAD200_opsz48.png"></a></td></tr></table></li>
-                            <li class="downloads"><table><tr><td>Downloads:</td><td><a href="https://store.steampowered.com/login/?purchasetype=self&checkout=1&redir=checkout%2F%3Fpurchasetype%3Dself%26cart%3D5077284209789451431%26snr%3D1_8_4__503&redir_ssl=1&snr=1_8_4__503"><img src="C:\Users\Yuvraj Jaiswal\Desktop\CSS-MySite\Icons\download_FILL0_wght500_GRAD200_opsz48.png"></a></td></tr></table></li>
+                            <li class="store"><table><tr><td>Games:</td><td><a href="https://store.steampowered.com/search/?sort_by=Reviews_DESC&category1=998&deck_compatibility=3%2C2&os=win&supportedlang=english&filter=topsellers&ndl=1"><img src="Icons\sports_esports_FILL0_wght500_GRAD200_opsz48.png"></a></td></tr></table></li>
+                            <li><table><tr><td>Reviews:</td><td><a href="https://www.metacritic.com/game/pc/tekken-7/user-reviews"><img src="Icons\rate_review_FILL0_wght500_GRAD200_opsz48.png"></a></td></tr></table></li>
+                            <li><table><tr><td>Help:</td><td><a href="https://help.steampowered.com/en/"><img src="Icons\contact_support_FILL0_wght500_GRAD200_opsz48.png"></a></td></tr></table></li>
+                            <li><table><tr><td>FAQs:</td><td><a href="https://www.metacritic.com/faq"><img src="Icons\quiz_FILL0_wght500_GRAD200_opsz48.png"></a></td></tr></table></li>
+                            <li><table><tr><td>Cart:</td><td><a href="https://store.steampowered.com/cart/"><img src="Icons\add_shopping_cart_FILL0_wght500_GRAD200_opsz48.png"></a></td></tr></table></li>
+                            <li class="downloads"><table><tr><td>Downloads:</td><td><a href="https://store.steampowered.com/login/?purchasetype=self&checkout=1&redir=checkout%2F%3Fpurchasetype%3Dself%26cart%3D5077284209789451431%26snr%3D1_8_4__503&redir_ssl=1&snr=1_8_4__503"><img src="Icons\download_FILL0_wght500_GRAD200_opsz48.png"></a></td></tr></table></li>
                         </ul>
                     </nav>
                 </header>
@@ -36,25 +36,25 @@
                     <p>Discover the epic conclusion of the long-time clan warfare between members of the Mishima family. Powered by Unreal Engine 4, the legendary fighting game franchise fights back with stunning story-driven cinematic battles and intense duels that can be enjoyed with friends and rivals.</p>
                     <table>
                         <tr>
-                            <td><a href="D:\Games\TEKKEN 7\TekkenGame\Binaries\Win64\TekkenGame-Win64-Shipping.exe" class="battle">Play Now:</a></td>
-                            <td><a href="https://www.metacritic.com/game/pc/tekken-7/trailers" class="play"><table><tr><td><img src="C:\Users\Yuvraj Jaiswal\Desktop\CSS-MySite\Icons\play_arrow_FILL0_wght500_GRAD200_opsz48.png"></td><td>Watch Trailer:</td></tr></table></a></td>
+                            <td><a href="#" class="battle">Play Now:</a></td>
+                            <td><a href="https://www.metacritic.com/game/pc/tekken-7/trailers" class="play"><table><tr><td><img src="Icons\play_arrow_FILL0_wght500_GRAD200_opsz48.png"></td><td>Watch Trailer:</td></tr></table></a></td>
                         </tr>                        
                     </table>
                   </div>
                   <div class="social">
                     <table>
                         <tr>
-                            <td><a href="https://store.steampowered.com/tags/en/Fighting/"><table><tr><td>Fighting:</td><td><img src="C:\Users\Yuvraj Jaiswal\Desktop\CSS-MySite\Icons\boxing-gloves.png" width="50" height="50"></td></tr></table></a></td>
-                            <td><a href="https://store.steampowered.com/tags/en/Arcade/"><table><tr><td>Arcade:</td><td><img src="C:\Users\Yuvraj Jaiswal\Desktop\CSS-MySite\Icons\arcade.png" width="50" height="50"></td></tr></table></a></td>
-                            <td><a href="https://store.steampowered.com/tags/en/Action/"><table><tr><td>Action:</td><td><img src="C:\Users\Yuvraj Jaiswal\Desktop\CSS-MySite\Icons\shooting.png" width="50" height="50"></td></tr></table></a></td>
-                            <td><a href="https://store.steampowered.com/tags/en/Competitive/"><table><tr><td>Online_Multiplayer:</td><td><img src="C:\Users\Yuvraj Jaiswal\Desktop\CSS-MySite\Icons\online.png" width="50" height="50"></td></tr></table></a></td>
-                            <td><a href="https://store.steampowered.com/tags/en/Local%20Multiplayer/"><table><tr><td>Local_Multiplayer:</td><td><img src="C:\Users\Yuvraj Jaiswal\Desktop\CSS-MySite\Icons\multiplayer.png" width="50" height="50"></td></tr></table></a></td>
-                            <td><a href="https://store.steampowered.com/tags/en/Great%20Soundtrack/"><table><tr><td>Great_Soundtrack:</td><td><img src="C:\Users\Yuvraj Jaiswal\Desktop\CSS-MySite\Icons\musical-note.png" width="50" height="50"></td></tr></table></a></td>
+                            <td><a href="https://store.steampowered.com/tags/en/Fighting/"><table><tr><td>Fighting:</td><td><img src="Icons\boxing-gloves.png" width="50" height="50"></td></tr></table></a></td>
+                            <td><a href="https://store.steampowered.com/tags/en/Arcade/"><table><tr><td>Arcade:</td><td><img src="Icons\arcade.png" width="50" height="50"></td></tr></table></a></td>
+                            <td><a href="https://store.steampowered.com/tags/en/Action/"><table><tr><td>Action:</td><td><img src="Icons\shooting.png" width="50" height="50"></td></tr></table></a></td>
+                            <td><a href="https://store.steampowered.com/tags/en/Competitive/"><table><tr><td>Online_Multiplayer:</td><td><img src="Icons\online.png" width="50" height="50"></td></tr></table></a></td>
+                            <td><a href="https://store.steampowered.com/tags/en/Local%20Multiplayer/"><table><tr><td>Local_Multiplayer:</td><td><img src="Icons\multiplayer.png" width="50" height="50"></td></tr></table></a></td>
+                            <td><a href="https://store.steampowered.com/tags/en/Great%20Soundtrack/"><table><tr><td>Great_Soundtrack:</td><td><img src="Icons\musical-note.png" width="50" height="50"></td></tr></table></a></td>
                         </tr>
                     </table>
                   </div>
                   <div class="image">
-                    <a href="https://store.steampowered.com/app/1778820/TEKKEN_8/"><img src="C:\Users\Yuvraj Jaiswal\Desktop\CSS-MySite\Images\tekken.webp"></a>
+                    <a href="https://store.steampowered.com/app/1778820/TEKKEN_8/"><img src="Images\tekken.webp"></a>
                   </div>  
                 </div>
             </div>
